@@ -1,6 +1,7 @@
 v2.0.11
 - fix wind-chill calculation
 - if we have a direct windchill or headindex value from the api, use that instead of calculating it
+- refresh the gridpoint and forecast urls from the lattitude/longitude every couple of days to handle grid changes in the api
 
 v2.0.10
 - radar images url path changed
